Translations + spacing issue on modal

--- a/src/components/_modal/pages/material/Material.module.css
+++ b/src/components/_modal/pages/material/Material.module.css
@@ -66,6 +66,10 @@
   margin-bottom: var(--pt4);
 }
 
+.buttonRowWrapperOrder {
+  margin-bottom: var(--pt4);
+}
+
 .renewError {
   justify-content: center;
   width: 100%;
